--- a/index.html
+++ b/index.html
@@ -9,164 +9,178 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- header section   -->
-    <header>
-      <a href="./index.html" class="logo"
-        >Web<span class="logo-text">Studio</span></a
-      >
-      <nav>
-        <ul class="site-nav list">
+    <header class="section header">
+      <div class="container">
+        <a href="./index.html" class="logo">
+          Web<span class="logo-text">Studio</span>
+        </a>
+        <nav>
+          <ul class="site-nav list">
+            <li>
+              <a href="./index.html" class="link current">Studio</a>
+            </li>
+            <li>
+              <a href="./portfolio.html" class="link">Portfolio</a>
+            </li>
+            <li>
+              <a href="" class="link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="auth-nav list">
           <li>
-            <a href="./index.html" class="link current">Studio</a>
+            <a href="mailto:info@devstudio.com" class="link">
+              info@devstudio.com
+            </a>
           </li>
           <li>
-            <a href="./portfolio.html" class="link">Portfolio</a>
-          </li>
-          <li>
-            <a href="" class="link">Contacts</a>
+            <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
           </li>
         </ul>
-      </nav>
-      <ul class="auth-nav list">
-        <li>
-          <a href="mailto:info@devstudio.com" class="link"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
-        </li>
-      </ul>
+      </div>
     </header>
     <main>
       <!-- Hero section  -->
-      <section class="hero">
+      <section class="hero section">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button type="button" class="hero-button">Order Service</button>
       </section>
       <!-- our adventages -->
-      <section class="section">
-        <h2 hidden class="section-title">adventages</h2>
-        <ul class="adventages-list list">
-          <li>
-            <h3 class="title">Strategy</h3>
-            <p class="section-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="title">Punctuality</h3>
-            <p class="section-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="title">Diligence</h3>
-            <p class="section-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="title">Technologies</h3>
-            <p class="section-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <section class="section adventages-section">
+        <div class="container">
+          <h2 class="visually-hidden section-title">adventages</h2>
+          <ul class="adventages-list list">
+            <li class="item">
+              <h3 class="title">Strategy</h3>
+              <p class="section-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="title">Punctuality</h3>
+              <p class="section-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="title">Diligence</h3>
+              <p class="section-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="title">Technologies</h3>
+              <p class="section-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- about us -->
-      <section>
-        <h2 class="section-title">What Are We Doing</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="./images/about/img1.jpg"
-              alt="computer"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/about/img2.jpg"
-              alt="phones"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/about/img3.jpg"
-              alt="laptop and phone"
-              width="360"
-              height="300"
-            />
-          </li>
-        </ul>
+      <section class="section section-about">
+        <div class="container">
+          <h2 class="section-title about-title">What Are We Doing</h2>
+          <ul class="about-list list">
+            <li class="about-item">
+              <img
+                src="./images/about/img1.jpg"
+                alt="computer"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li class="about-item">
+              <img
+                src="./images/about/img2.jpg"
+                alt="phones"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li class="about-item">
+              <img
+                src="./images/about/img3.jpg"
+                alt="laptop and phone"
+                width="360"
+                height="300"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- our team  -->
       <section class="section section-team">
-        <h2 class="section-title">Our Team</h2>
-        <ul class="team-list list">
-          <li>
-            <img
-              src="./images/team/img1.jpg"
-              alt="Product Designer"
-              width="264"
-              height="260"
-            />
-            <h3 class="title">Mark Guerrero</h3>
-            <p>Product Designer</p>
-          </li>
-          <li>
-            <img
-              src="./images/team/img2.jpg"
-              alt="Frontend Developer"
-              width="264"
-              height="260"
-            />
-            <h3 class="title">Tom Ford</h3>
-            <p>Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="./images/team/img3.jpg"
-              alt="Marketing"
-              width="264"
-              height="260"
-            />
-            <h3 class="title">Camila Garcia</h3>
-            <p>Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/team/img4.jpg"
-              alt="UI Designer"
-              width="264"
-              height="260"
-            />
-            <h3 class="title">Daniel Wilson</h3>
-            <p>UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title team-title">Our Team</h2>
+          <ul class="team-list list">
+            <li class="item">
+              <img
+                src="./images/team/img1.jpg"
+                alt="Product Designer"
+                width="264"
+                height="260"
+              />
+              <h3 class="card-title title">Mark Guerrero</h3>
+              <p class="card-text">Product Designer</p>
+            </li>
+            <li class="item">
+              <img
+                src="./images/team/img2.jpg"
+                alt="Frontend Developer"
+                width="264"
+                height="260"
+              />
+              <h3 class="card-title title">Tom Ford</h3>
+              <p class="card-text">Frontend Developer</p>
+            </li>
+            <li class="item">
+              <img
+                src="./images/team/img3.jpg"
+                alt="Marketing"
+                width="264"
+                height="260"
+              />
+              <h3 class="card-title title">Camila Garcia</h3>
+              <p class="card-text">Marketing</p>
+            </li>
+            <li class="item">
+              <img
+                src="./images/team/img4.jpg"
+                alt="UI Designer"
+                width="264"
+                height="260"
+              />
+              <h3 class="card-title title">Daniel Wilson</h3>
+              <p class="card-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- footer -->
-    <footer class="footer">
-      <a href="./index.html" class="logo"
-        >Web<span class="logo-text">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+    <footer class="section footer">
+      <div class="container">
+        <a href="./index.html" class="logo"
+          >Web<span class="logo-text">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
