--- a/portfolio.html
+++ b/portfolio.html
@@ -9,153 +9,166 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- header section   -->
-    <header>
-      <a href="./index.html" class="logo"
-        >Web<span class="logo-text">Studio</span></a
-      >
-      <nav>
-        <ul class="site-nav list">
+    <header class="section header">
+      <div class="container">
+        <a href="./index.html" class="logo"
+          >Web<span class="logo-text">Studio</span></a
+        >
+        <nav>
+          <ul class="site-nav list">
+            <li>
+              <a href="./index.html" class="link">Studio</a>
+            </li>
+            <li>
+              <a href="./portfolio.html" class="link current">Portfolio</a>
+            </li>
+            <li>
+              <a href="" class="link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="auth-nav list">
           <li>
-            <a href="./index.html" class="link">Studio</a>
+            <a href="mailto:info@devstudio.com" class="link"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="./portfolio.html" class="link current">Portfolio</a>
-          </li>
-          <li>
-            <a href="" class="link">Contacts</a>
+            <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
           </li>
         </ul>
-      </nav>
-      <ul class="auth-nav list">
-        <li>
-          <a href="mailto:info@devstudio.com" class="link"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
-        </li>
-      </ul>
+      </div>
     </header>
     <main>
-      <h1 hidden>Filter</h1>
       <!-- section buttons  -->
-      <ul class="list">
-        <li>
-          <button type="button" class="list-button">All</button>
-        </li>
-        <li><button type="button" class="list-button">Web Site</button></li>
-        <li><button type="button" class="list-button">App</button></li>
-        <li><button type="button" class="list-button">Design</button></li>
-        <li><button type="button" class="list-button">Marketing</button></li>
-      </ul>
-      <!-- section gallery  -->
-      <ul class="list list-cards">
-        <li>
-          <img
-            src="./images/portfolio/img1.jpg"
-            alt="Banking App Interface"
-            width="360"
-            height="300"
-          />
-          <h2 class="title">Banking App Interface Concept</h2>
-          <p>App</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio/img2.jpg"
-            alt="Cashless Payment"
-            width="360"
-            height="300"
-          />
-          <h2 class="title">Cashless Payment</h2>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio/img3.jpg"
-            alt="Meditaion App"
-            width="360"
-            height="300"
-          />
-          <h2 class="title">Meditaion App</h2>
-          <p>App</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio/img4.jpg"
-            alt="Taxi Service"
-            width="360"
-            height="300"
-          />
-          <h2 class="title">Taxi Service</h2>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio/img5.jpg"
-            alt="Screen Illustrations"
-            width="360"
-            height="300"
-          />
-          <h2 class="title">Screen Illustrations</h2>
-          <p>Design</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio/img6.jpg"
-            alt="Online Courses"
-            width="360"
-            height="300"
-          />
-          <h2 class="title">Online Courses</h2>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio/img7.jpg"
-            alt="Instagram Stories Concept"
-            width="360"
-            height="300"
-          />
-          <h2 class="title">Instagram Stories Concept</h2>
-          <p>Design</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio/img8.jpg"
-            alt="Organic Food"
-            width="360"
-            height="300"
-          />
-          <h2 class="title">Organic Food</h2>
-          <p>Web Site</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio/img9.jpg"
-            alt="Fresh Coffee"
-            width="360"
-            height="300"
-          />
-          <h2 class="title">Fresh Coffee</h2>
-          <p>Web Site</p>
-        </li>
-      </ul>
+      <section class="section-gallery">
+        <div class="container">
+          <h1 class="visually-hidden">Filter</h1>
+          <ul class="list-button list">
+            <li>
+              <button type="button" class="list-item">All</button>
+            </li>
+            <li><button type="button" class="list-item">Web Site</button></li>
+            <li><button type="button" class="list-item">App</button></li>
+            <li><button type="button" class="list-item">Design</button></li>
+            <li><button type="button" class="list-item">Marketing</button></li>
+          </ul>
+
+          <!-- section gallery  -->
+          <ul class="list list-cards">
+            <li class="gallery-item item">
+              <img
+                src="./images/portfolio/img1.jpg"
+                alt="Banking App Interface"
+                width="360"
+                height="300"
+              />
+              <h2 class="gallery-title title">Banking App Interface Concept</h2>
+              <p class="gallery-text">App</p>
+            </li>
+            <li class="gallery-item item">
+              <img
+                src="./images/portfolio/img2.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <h2 class="gallery-title title">Cashless Payment</h2>
+              <p class="gallery-text">Marketing</p>
+            </li>
+            <li class="gallery-item item">
+              <img
+                src="./images/portfolio/img3.jpg"
+                alt="Meditaion App"
+                width="360"
+                height="300"
+              />
+              <h2 class="gallery-title title">Meditaion App</h2>
+              <p class="gallery-text">App</p>
+            </li>
+            <li class="gallery-item">
+              <img
+                src="./images/portfolio/img4.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <h2 class="gallery-title title">Taxi Service</h2>
+              <p class="gallery-text">Marketing</p>
+            </li>
+            <li class="gallery-item">
+              <img
+                src="./images/portfolio/img5.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <h2 class="gallery-title title">Screen Illustrations</h2>
+              <p class="gallery-text">Design</p>
+            </li>
+            <li class="gallery-item">
+              <img
+                src="./images/portfolio/img6.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <h2 class="gallery-title title">Online Courses</h2>
+              <p class="gallery-text">Marketing</p>
+            </li>
+            <li class="gallery-item">
+              <img
+                src="./images/portfolio/img7.jpg"
+                alt="Instagram Stories Concept"
+                width="360"
+                height="300"
+              />
+              <h2 class="gallery-title title">Instagram Stories Concept</h2>
+              <p class="gallery-text">Design</p>
+            </li>
+            <li class="gallery-item">
+              <img
+                src="./images/portfolio/img8.jpg"
+                alt="Organic Food"
+                width="360"
+                height="300"
+              />
+              <h2 class="gallery-title title">Organic Food</h2>
+              <p class="gallery-text">Web Site</p>
+            </li>
+            <li class="gallery-item">
+              <img
+                src="./images/portfolio/img9.jpg"
+                alt="Fresh Coffee"
+                width="360"
+                height="300"
+              />
+              <h2 class="gallery-title title">Fresh Coffee</h2>
+              <p class="gallery-text">Web Site</p>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <!-- footer  -->
-    <footer class="footer">
-      <a href="./index.html" class="logo"
-        >Web<span class="logo-text">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+    <footer class="section footer">
+      <div class="container">
+        <a href="./index.html" class="logo"
+          >Web<span class="logo-text">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
