--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <!-- header section   -->
-    <header class="section header">
+    <header class="header">
       <div class="container">
         <a href="./index.html" class="logo"
           >Web<span class="logo-text">Studio</span></a
@@ -71,8 +71,12 @@
                 width="360"
                 height="300"
               />
-              <h2 class="gallery-title title">Banking App Interface Concept</h2>
-              <p class="gallery-text">App</p>
+              <div class="desc-card">
+                <h2 class="gallery-title title">
+                  Banking App Interface Concept
+                </h2>
+                <p class="gallery-text">App</p>
+              </div>
             </li>
             <li class="gallery-item item">
               <img
@@ -81,8 +85,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="gallery-title title">Cashless Payment</h2>
-              <p class="gallery-text">Marketing</p>
+              <div class="desc-card">
+                <h2 class="gallery-title title">Cashless Payment</h2>
+                <p class="gallery-text">Marketing</p>
+              </div>
             </li>
             <li class="gallery-item item">
               <img
@@ -91,8 +97,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="gallery-title title">Meditaion App</h2>
-              <p class="gallery-text">App</p>
+              <div class="desc-card">
+                <h2 class="gallery-title title">Meditaion App</h2>
+                <p class="gallery-text">App</p>
+              </div>
             </li>
             <li class="gallery-item">
               <img
@@ -101,8 +109,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="gallery-title title">Taxi Service</h2>
-              <p class="gallery-text">Marketing</p>
+              <div class="desc-card">
+                <h2 class="gallery-title title">Taxi Service</h2>
+                <p class="gallery-text">Marketing</p>
+              </div>
             </li>
             <li class="gallery-item">
               <img
@@ -111,8 +121,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="gallery-title title">Screen Illustrations</h2>
-              <p class="gallery-text">Design</p>
+              <div class="desc-card">
+                <h2 class="gallery-title title">Screen Illustrations</h2>
+                <p class="gallery-text">Design</p>
+              </div>
             </li>
             <li class="gallery-item">
               <img
@@ -121,8 +133,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="gallery-title title">Online Courses</h2>
-              <p class="gallery-text">Marketing</p>
+              <div class="desc-card">
+                <h2 class="gallery-title title">Online Courses</h2>
+                <p class="gallery-text">Marketing</p>
+              </div>
             </li>
             <li class="gallery-item">
               <img
@@ -131,8 +145,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="gallery-title title">Instagram Stories Concept</h2>
-              <p class="gallery-text">Design</p>
+              <div class="desc-card">
+                <h2 class="gallery-title title">Instagram Stories Concept</h2>
+                <p class="gallery-text">Design</p>
+              </div>
             </li>
             <li class="gallery-item">
               <img
@@ -141,8 +157,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="gallery-title title">Organic Food</h2>
-              <p class="gallery-text">Web Site</p>
+              <div class="desc-card">
+                <h2 class="gallery-title title">Organic Food</h2>
+                <p class="gallery-text">Web Site</p>
+              </div>
             </li>
             <li class="gallery-item">
               <img
@@ -151,15 +169,17 @@
                 width="360"
                 height="300"
               />
-              <h2 class="gallery-title title">Fresh Coffee</h2>
-              <p class="gallery-text">Web Site</p>
+              <div class="desc-card">
+                <h2 class="gallery-title title">Fresh Coffee</h2>
+                <p class="gallery-text">Web Site</p>
+              </div>
             </li>
           </ul>
         </div>
       </section>
     </main>
     <!-- footer  -->
-    <footer class="section footer">
+    <footer class="footer">
       <div class="container">
         <a href="./index.html" class="logo"
           >Web<span class="logo-text">Studio</span></a
