--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <!-- header section   -->
-    <header class="section header">
+    <header class="header">
       <div class="container">
         <a href="./index.html" class="logo">
           Web<span class="logo-text">Studio</span>
@@ -133,8 +133,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="card-title title">Mark Guerrero</h3>
-              <p class="card-text">Product Designer</p>
+              <div class="desc-team">
+                <h3 class="card-title title">Mark Guerrero</h3>
+                <p class="card-text">Product Designer</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -143,8 +145,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="card-title title">Tom Ford</h3>
-              <p class="card-text">Frontend Developer</p>
+              <div class="desc-team">
+                <h3 class="card-title title">Tom Ford</h3>
+                <p class="card-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -153,8 +157,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="card-title title">Camila Garcia</h3>
-              <p class="card-text">Marketing</p>
+              <div class="desc-team">
+                <h3 class="card-title title">Camila Garcia</h3>
+                <p class="card-text">Marketing</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -163,15 +169,17 @@
                 width="264"
                 height="260"
               />
-              <h3 class="card-title title">Daniel Wilson</h3>
-              <p class="card-text">UI Designer</p>
+              <div class="desc-team">
+                <h3 class="card-title title">Daniel Wilson</h3>
+                <p class="card-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
       </section>
     </main>
     <!-- footer -->
-    <footer class="section footer">
+    <footer class="footer">
       <div class="container">
         <a href="./index.html" class="logo"
           >Web<span class="logo-text">Studio</span></a
